@@ -4,10 +4,11 @@ amaroK ChangeLog
 
 
 VERSION 1.2-beta3:
+  FIX: amaroK icon shows correctly in window decoration under GNOME.
   ADD: Support for ID3v2 cover images. (Thanks to M. Thiesen!) (BR 88492)
   ADD: DCOP calls for the status of Random Mode, Repeat Playlist and
        Repeat Track.
-  ADD: DCOP call to return the sample rate. 
+  ADD: DCOP call to return the sample rate.
   ADD: DCOP call to return the track number. (BR 94825)
   FIX: GStreamer-engine provides better scope synchronisation.
   ADD: Save current track position and play queue on exit. (BR 90379)
